--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <h1>js-dom.1</h1>
     <img src="./img/white_lamp.png" class="img-thumbnail" alt="lampadina-spenta">
-    <button id="buttonClick" type="button" class="btn btn-primary">Accendi</button>
+    <button id="bottone" type="button" class="btn btn-primary">Accendi</button>
+    
 
 
+    
+   
     <script src="./script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
