lampadina accesa- cambio src

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>js-dom.1</h1>
-    <img src="./img/white_lamp.png" class="img-thumbnail" alt="lampadina-spenta">
+    <img id="img" src="./img/white_lamp.png" class="img-thumbnail" alt="lampadina-spenta">
     <button id="bottone" type="button" class="btn btn-primary">Accendi</button>
     
 
